# ClientAuthenticationManager

./: .gitignore  requirements.txt  setup.cfg
src/austin_heller_repo/: client_authentication_manager.py
src/client_authentication_manager_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: client_authentication_manager_test.py  oauth_settings.ini
