[metadata]
name = client-authentication-manager-austinhellerrepo
version = 0.1.0
author = Austin Heller
description = A framework for authenticating clients
url = https://github.com/AustinHellerRepo/ClientAuthenticationManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading
  socket-queued-message-framework-austinhellerrepo@git+https://github.com/AustinHellerRepo/SocketQueuedMessageFramework
  python-jose
  oidcrp
  requests_oauthlib

[options.packages.find]
where = src
